# Rust-Redis-Docker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
rust-app/: Cargo.toml  Dockerfile
rust-app/celery-macros/: Cargo.toml
rust-app/celery-macros/src/: lib.rs
rust-app/celerylib/: Cargo.toml
rust-app/celerylib/src/: lib.rs
rust-app/src/: config.rs  constants.rs  main.rs
rust-app/src/app/: celery_settings.rs  mod.rs
rust-app/src/celery/: errors.rs  mod.rs
rust-app/src/celeryinterface/: mod.rs
rust-app/src/our_redis/: mod.rs
rust-app/src/worker/: mod.rs
rust-worker/: Dockerfile
