[workspace]
members = [
    ".",
    "celerylib"
]

[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = "0.31"
thiserror = "2.0.12"
celerylib = { path = "./celerylib" }
uuid = { version = "1.16", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.21.3"
image = "0.25.6"
rayon = "1.8.0"
